# DataGuard

./: .gitignore  Cargo.toml  README.md  benchmark.sh  docker-compose.yml  generate_csv.py  test_csv_streaming.sh  test_izy.sh  test_mvp.sh
.github/workflows/: ci.yml
.sqlx/: query-06dee11d98af5f6566e83feb327954c426b22874acdc84198b2bf8b1d2867c64.json  query-22d90bde84f2f30734a18709edbbd596d854686854830a4b6daff67533409a95.json  query-3c94c56c88c7fc4447bfd4f07739bbe2629ac2caacc0ea2c5cdbf90a7bf9971b.json  query-460f7e801ab63b86465cf40d7cae7e553fe18545f0271adf543b341f05ecf9c3.json  query-483c445a23d9a2d6c89b68fbd622a55c0ad7973d9ca9a769fbb55ba8b5fb9baa.json  query-4bfce4c349f10b8b06744b6dadc51338497fb065a11ed15d985586c5bd7a99c8.json  query-6092f2854f4068a3a810f7f7cc3fc290e79f7df200d8bac0f1ace9973734e5bf.json  query-74a2d02b3be212ee34e254b40fc9457db9e23a158b026a4da88add5e04684410.json  query-7caa4da197d5cec729d3ecdaea30baa2b1d5e51f14b2a1abc951adfd47172877.json  query-8eb839e9a84fa47188ebaaa5cac5cf0061ee9ea1bc4644f3609756849b390fcb.json  query-8eb9339a75f672949ba3d3dbdd35bb436a8b4fe1e7bdcc83a4e27c19eaaac379.json  query-91b27ec886a637694276419259aec03738ed27a575aa8d7bbd83ef300ad71031.json  query-9a0418f6d20df81bf585ee5034c388c78fe136904d55293ddad5988befc60536.json  query-b74c638c667cd71537dd101ede88a34b4769a5f0df3abd88aeec63c715b86326.json  query-d533958f29a1d3281226237490db8f9d950ad3fad0be8fc465f2669024cff83d.json  query-d9fc9c61026135006ba1099f9b04f53e7473dd9e63b0f46331cb0c1e1ad1aa29.json  query-fd742250b03561d8afd7ccb72a3e904886388a0e2790f1c5c92566d9d95dbac6.json
api/: Cargo.toml
api/src/: auth.rs  integration_tests.rs  main.rs
api/src/handlers/: auth.rs  csv.rs  mod.rs  schemas.rs  validate.rs
migrations/: 202603220000_initial_schema.sql  202603220001_add_records_processed.sql  202603220002_fix_usage_logs_fk.sql
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/db/: mod.rs
shared/src/models/: mod.rs
