[workspace]
resolver = "2"
members = [
    "api",
    "worker",
    "shared",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Niaina <niaina@example.com>"]
repository = "https://github.com/niaina/DataGuard"
license = "MIT"
description = "A high-performance JSON/CSV data validation and transformation API"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.37", features = ["full"] }

# Web Framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Serialization & Validation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonschema = "0.17"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Utilities
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
moka = { version = "0.12", features = ["future"] }
thiserror = "1.0"
anyhow = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
