[package]
name = "api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.7", features = ["multipart", "macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonschema = "0.17"
moka = { version = "0.12", features = ["future"] }
csv = "1.3"
csv-async = "1.2"
futures = "0.3"
tokio-stream = "0.1"
bytes = "1.5"
tokio-util = { version = "0.7", features = ["io", "compat"] }
async-stream = "0.3"
anyhow = "1.0"
shared = { path = "../shared" }
argon2 = { workspace = true }
